[build-system]
build-backend = "hatchling.build"

requires = [ "hatch-vcs==0.5", "hatchling==1.27" ]

[project]
name = "tap-pomelo"
version = "0.0.1"
description = "Singer tap for Pomelo, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Pomelo",
  "singer.io",
]
license = "Apache-2.0"
maintainers = [ { name = "Edgar-Ramírez", email = "edgarrm358@gmail.com" } ]
authors = [ { name = "Edgar-Ramírez", email = "edgarrm358@gmail.com" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "singer-sdk~=0.51.0",
  "typing-extensions>=4.15; python_full_version<'3.12'",
]

urls.Documentation = "https://github.com/reservoir-data/tap-pomelo#readme"
urls.Homepage = "https://github.com/reservoir-data/tap-pomelo"
urls.Repository = "https://github.com/reservoir-data/tap-pomelo"
scripts.tap-pomelo = "tap_pomelo.tap:TapPomelo.cli"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "singer-sdk[testing]",
]
typing = [
  "mypy>=1.18.2",
  "ty>=0.0.1a21",
  { include-group = "testing" },
]

[tool.ruff]
line-length = 88
lint.select = [
  "ALL",
]
lint.ignore = [
  "DJ", # flake8-django
]
lint.per-file-ignores."noxfile.py" = [
  "ANN",
]
lint.per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
lint.flake8-annotations.allow-star-arg-any = true

lint.isort.known-first-party = [ "tap_pomelo" ]
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest.ini_options]
addopts = "-vvv"

[tool.tox]
min_version = "4.22"
requires = [ "tox", "tox-uv" ]
isolated_build = true
env_list = [
  "3.14",
  "3.13",
  "3.12",
  "3.11",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_POMELO_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.typing]
dependency_groups = [ "testing", "typing" ]
commands = [
  [ "mypy", "--strict", { replace = "posargs", default = [ "tap_pomelo", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_pomelo", "tests" ], extend = true } ],
]

[tool.mypy]
warn_unused_configs = true
