[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs==0.5", "hatchling==1.28" ]

[project]
name = "tap-pomelo"
version = "0.0.1"
description = "Singer tap for Pomelo, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Pomelo",
  "singer.io",
]
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "singer-sdk~=0.54.0a5",
  "typing-extensions>=4.15; python_full_version<'3.12'",
]
[[project.authors]]
name = "Edgar-Ramírez"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar-Ramírez"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-pomelo = "tap_pomelo.tap:TapPomelo.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-pomelo#readme"
Homepage = "https://github.com/reservoir-data/tap-pomelo"
Repository = "https://github.com/reservoir-data/tap-pomelo"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "singer-sdk[testing]",
]
typing = [
  "mypy>=1.18.2",
  "ty>=0.0.1a21",
  { include-group = "testing" },
]

[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "DJ", # flake8-django
]
per-file-ignores."noxfile.py" = [
  "ANN",
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
flake8-annotations.allow-star-arg-any = true
isort.known-first-party = [ "tap_pomelo" ]
isort.required-imports = [
  "from __future__ import annotations",
]
pydocstyle.convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.pytest]
addopts = [ "-vvv", "-ra", "--strict-config", "--strict-markers" ]
filterwarnings = [
  "error",
  "once:Fields in transformed catalog but not in records:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]
xfail_strict = true

[tool.tox]
min_version = "4.43"
requires = [ "tox", "tox-uv" ]
isolated_build = true
env_list = [
  "typing",
  { product = [
    { prefix = "3.", start = 12 },
  ] },
]
[tool.tox.env]
typing.dependency_groups = [ "testing", "typing" ]
typing.commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_pomelo", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_pomelo", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_POMELO_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.mypy]
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
strict = true
warn_unreachable = true
warn_unused_configs = true
