[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs==0.5", "hatchling==1.30.1" ]

[project]
name = "tap-pomelo"
description = "Singer tap for Pomelo, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Pomelo",
  "singer.io",
]
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "singer-sdk~=0.55.0a1",
]
[[project.authors]]
name = "Edgar-Ramírez"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar-Ramírez"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-pomelo = "tap_pomelo.tap:TapPomelo.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-pomelo#readme"
Homepage = "https://github.com/reservoir-data/tap-pomelo"
Repository = "https://github.com/reservoir-data/tap-pomelo"

[dependency-groups]
dev = [
  "deptry>=0.25.1",
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "singer-sdk[testing]",
]
typing = [
  "mypy>=2.1",
  "ty>=0.0.40",
  { include-group = "testing" },
]

[tool.hatch.version]
fallback-version = "0.0.0.dev0"
source = "vcs"

[tool.uv]
required-version = ">=0.11"

[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "DJ", # flake8-django
]
per-file-ignores."noxfile.py" = [
  "ANN",
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
flake8-annotations.allow-star-arg-any = true
pydocstyle.convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
strict = true
warn_unused_configs = true

[tool.pytest]
addopts = [
  "-v",
  "-ra",
]
filterwarnings = [
  "error",
  "once:Fields in transformed catalog but not in records:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]

[tool.tox]
requires = [ "tox>=4.55", "tox-uv>=1.35" ]
env_list = [
  "dependencies",
  "typing",
  { prefix = "3.", start = 12 },
]
[tool.tox.env.dependencies]
description = "check for unused, missing and transitive dependencies"
dependency_groups = [ "dev" ]
commands = [ [ "deptry", "." ] ]
[tool.tox.env.typing]
description = "type checks"
dependency_groups = [ "testing", "typing" ]
commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_pomelo", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_pomelo", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
description = "run unit tests on Python {py_dot_ver}"
base_python_file = [ ".python-version" ]
dependency_groups = [ "testing" ]
pass_env = [ "TAP_POMELO_*" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
